@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.jboss</groupId>
     <artifactId>jboss-parent</artifactId>
-    <version>20</version>
+    <version>25</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -227,6 +227,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>${version.compiler.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -377,6 +378,15 @@
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>${version.javax.annotation}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
   <properties>
     <!-- IP stack configs. -->
     <testLogToFile>true</testLogToFile>
@@ -390,13 +400,15 @@
                         -javaagent:${project.build.directory}/lib/byteman.jar=listener:true
     </jvm.args.byteman>
     <jvm.args.jacoco>-javaagent:${project.build.directory}/lib/jacocoagent.jar=destfile=${project.build.directory}/coverage-reports/jacoco-ut.exec,includes=*,append=true,output=file</jvm.args.jacoco>
-    <jvm.args.memory>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:ParallelGCThreads=2</jvm.args.memory>
+    <!-- the need for -XX:MaxPermSize= was dropped as of Java SE 8 -->
+    <!-- j9 TODO -XX:ParallelGCThreads=2 is no not available in Java SE 9 -->
+    <jvm.args.memory>-Xms64m -Xmx1024m</jvm.args.memory>
     <jvm.args.debug></jvm.args.debug>
     <jvm.args.other>-server</jvm.args.other>
-    
+    <jvm.args.jdk9/>
+
     <!-- External dependencies versions -->
     <version.org.codehaus.mojo.findbugs-maven-plugin>3.0.1</version.org.codehaus.mojo.findbugs-maven-plugin>
-    <version.org.wildfly.arquillian>1.0.2.Final</version.org.wildfly.arquillian>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.1.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
     <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
@@ -419,7 +431,7 @@
     <version.org.jacorb.jacorb>2.3.2-jbossorg-5</version.org.jacorb.jacorb>
     <version.org.jacorb.jacorb-idl-compiler>2.3.1</version.org.jacorb.jacorb-idl-compiler>
     <version.jacorb>2.3.1jboss.patch01-brew</version.jacorb>
-    <version.org.jboss.openjdk-orb>8.0.4.Final</version.org.jboss.openjdk-orb>
+    <version.org.jboss.openjdk-orb>8.0.8.Final</version.org.jboss.openjdk-orb>
     <version.javax.annotation>1.2</version.javax.annotation>
     <version.javax.enterprise>1.1</version.javax.enterprise>
     <version.javax.inject>1</version.javax.inject>
@@ -447,20 +459,20 @@
     <version.com.sun.grizzly>1.9.59</version.com.sun.grizzly>
     <version.org.codehaus.jettison>1.3.4</version.org.codehaus.jettison>
     <version.junit>4.11</version.junit>
-    <version.org.jboss.byteman>2.1.3</version.org.jboss.byteman>
-    <version.org.jboss.arquillian.core>1.1.7.Final</version.org.jboss.arquillian.core>
-    <version.org.jboss.arquillian.container.weld>1.0.0.CR8</version.org.jboss.arquillian.container.weld>
+    <version.org.jboss.byteman>4.0.0-BETA5</version.org.jboss.byteman>
+    <version.org.wildfly.arquillian>2.0.0.Final</version.org.wildfly.arquillian>
+    <version.org.jboss.arquillian.core>1.1.11.Final</version.org.jboss.arquillian.core>
+    <version.org.jboss.arquillian.container.weld>1.0.0.CR9</version.org.jboss.arquillian.container.weld>
     <version.org.jboss.arquillian.container.tomcat>1.0.0.CR7</version.org.jboss.arquillian.container.tomcat>
     <version.org.jboss.shrinkwrap.resolver>2.2.2</version.org.jboss.shrinkwrap.resolver>
     <version.org.jboss.jboss-transaction-spi>7.6.0.Final</version.org.jboss.jboss-transaction-spi>
     <version.javax.javaee-api>7.0</version.javax.javaee-api>
     <version.javax.ws.rs-api>2.0.1</version.javax.ws.rs-api>
-    <version.org.mockito>1.10.19</version.org.mockito>
+    <version.org.mockito>2.5.3</version.org.mockito>
 
     <!-- Maven plugin versions -->
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
     <version.org.jboss.as.plugins.jboss-as-maven-plugin>7.4.Final</version.org.jboss.as.plugins.jboss-as-maven-plugin>
-    <version.org.apache.maven.plugins.maven-antrun-plugin>1.7</version.org.apache.maven.plugins.maven-antrun-plugin>
     <version.org.jacoco>0.7.4.201502262128</version.org.jacoco>
 <!--
     <version.org.jacoco>0.7.2.201409121644</version.org.jacoco>
@@ -469,8 +481,7 @@
     <version.org.jacoco>0.6.3.201306030806</version.org.jacoco>
 -->
     <version.org.sonatype.plugins.nexus-staging-maven-plugin>1.6.6</version.org.sonatype.plugins.nexus-staging-maven-plugin>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <version.org.codehaus.plexus.plexus-archiver>3.0.3</version.org.codehaus.plexus.plexus-archiver>
   </properties>
   <modules>
     <module>tools</module>
@@ -492,6 +503,7 @@
     <module>vertx</module>
   </modules>
   <profiles>
+<!-- j9 TODO figure out why the check fails on ArjunaCore arjuna
     <profile>
       <id>byteman-rulecheck</id>
       <activation>
@@ -521,8 +533,52 @@
         </plugins>
       </build>
     </profile>
-
-      
+-->
+      <profile>
+        <id>j9</id>
+        <activation>
+          <jdk>[1.9,)</jdk>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration combine.self="append">
+                <forkMode>pertest</forkMode>
+                <childDelegation>true</childDelegation>
+                <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
+                <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                <argLine>-Djdk.attach.allowAttachSelf=true ${jvm.args.jdk9}</argLine>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-enforcer-plugin</artifactId>
+              <executions>
+                <execution>
+                <id>enforce-versions</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireJavaVersion>
+                      <version>1.9</version>
+                    </requireJavaVersion>
+                  </rules>
+                </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+        <properties>
+          <maven.compiler.source>1.9</maven.compiler.source>
+          <maven.compiler.target>1.9</maven.compiler.target>
+          <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}</server.jvm.args>
+        </properties>
+      </profile>
     <profile>
       <id>release</id>
       <build>
@@ -653,7 +709,6 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
-                  <!-- Sets the VM argument line used when unit tests are run. -->
                   <argLine>${surefireArgLine} -Xss2048k</argLine>
                   <systemProperties>
                       <property>
